# google-hackathon-beszketnyky

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/agents/: gcp-infra.md  nextjs-frontend.md  postgres-database.md  python-backend.md
.docker/: backend.Dockerfile
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 75d4c5a39bf5_initial_schema.py  a1b2c3d4e5f6_add_inventory_detail_columns_and_photo_notes.py
backend/app/: database.py  main.py
backend/app/api/: apartments.py  conversations.py  inventory.py  lease_periods.py  listings.py  moveout.py
backend/app/core/: config.py  dependencies.py
backend/app/models/: __init__.py  apartment.py  conversation.py  damage_report.py  inventory_item.py  lease_period.py  listing.py  message.py  photo.py
backend/app/schemas/: apartment.py  conversation.py  inventory.py  lease_period.py  listing.py  moveout.py  photo.py
backend/app/services/: damage_ai_service.py  gcs_service.py  inventory_ai_service.py  vertex_ai_service.py
backend/scripts/: init_gcs.py  seed_database.py
context/product/: architecture.md  product-definition-lite.md  product-definition.md  roadmap.md
context/spec/001-rentos-dashboard-ui/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-gcs-photo-integration/: functional-spec.md  tasks.md  (+1 more)
frontend/: .env.example  Dockerfile  README.md  next.config.js  package.json
notebooks/: cloud_storage_example.py  google_cloud_examples.py  vertex_request_example.py
(+48 files in other folders)
